--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Witches Lab</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
+    </header>
+    <section class="home_bg">
+        <div class="circle">
+            <h1 class="lab">The Witches Lab</h1>
+            <p>Metaphysical shop</p>
+            <a class="button1" href="index.html">Shop Now</a>
+        </div>
+        <img class="forest" src="rune-stones.jpg">
+    </section>
+
+</body>
+
+</html>
