Setting up the landing page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <body>
     <header>
         <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
+        <div class="links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">Shop</a></li>
+        </div>
     </header>
     <section class="home_bg">
         <div class="circle">
@@ -19,7 +24,7 @@
             <p>Metaphysical shop</p>
             <a class="button1" href="index.html">Shop Now</a>
         </div>
-        <img class="forest" src="rune-stones.jpg">
+        <img class="forest" src="mossforest.jpg">
     </section>
 
 </body>
