--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
         <div class="links">
-            <li><a href="#about">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#about">Shop</a></li>
         </div>
@@ -21,8 +21,8 @@
     <section class="home_bg">
         <div class="circle">
             <h1 class="lab">The Witches Lab</h1>
-            <p>Metaphysical shop</p>
-            <a class="button1" href="index.html">Shop Now</a>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, esse ut voluptatem iusto provident accusantium facere, veritatis optio quo fugit tempore delectus, ipsum nemo perspiciatis ipsa animi minus autem beatae quae vitae voluptatum
+                odio? Numquam excepturi necessitatibus quidem ut maxime?</p>
         </div>
         <img class="forest" src="mossforest.jpg">
     </section>
