--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     <section class="home_bg">
         <div class="circle">
             <h1 class="lab">The Witches Lab</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, esse ut voluptatem iusto provident accusantium facere, veritatis optio quo fugit tempore delectus, ipsum nemo perspiciatis ipsa animi minus autem beatae quae vitae voluptatum
-                odio? Numquam excepturi necessitatibus quidem ut maxime?</p>
+
+            <p>Metaphysical shop</p>
+            <img src="Maskgroup.svg" class="line">
+            <a class="button1" href="index.html">Shop Now</a>
         </div>
         <img class="forest" src="mossforest.jpg">
     </section>
