--- a/about.html
+++ b/about.html
@@ -19,11 +19,12 @@
         </div>
     </header>
     <section class="home_bg">
-        <div class="circle1"></div>
-        <h1 class="about_h1">About</h1>
-        <p class="p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab dolore rerum id unde, eum nisi. Eligendi vero veritatis reprehenderit voluptatibus, repudiandae, ea rerum earum sapiente quas illum quo excepturi, totam labore vitae? Vero voluptatum
-            nobis doloremque illum quos obcaecati saepe.</p>
 
+        <div class="circle1">
+            <h1 class="about_h1">About</h1>
+            <p class="p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab dolore rerum id unde, eum nisi. Eligendi vero veritatis reprehenderit voluptatibus, repudiandae, ea rerum earum sapiente quas illum quo excepturi, totam labore vitae? Vero voluptatum
+                nobis doloremque illum quos obcaecati saepe.</p>
+        </div>
         <img class="runes" src="tarot-991041_1920.jpg">
     </section>
 
