--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="links">
             <li><a href="about.html">About</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">Shop</a></li>
+            <li><a href="shop.html">Shop</a></li>
         </div>
     </header>
     <section class="home_bg">
