--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <p>Metaphysical shop</p>
             <img src="Maskgroup.svg" class="line">
-            <a class="button1" href="index.html">Shop Now</a>
+            <a class="button1" href="shop.html">Shop Now</a>
         </div>
         <img class="forest" src="mossforest.jpg">
     </section>
