--- a/shop.html
+++ b/shop.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+    <header>
+        <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
+        <div class="links">
+            <li><a href="about.html">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="shop.html">Shop</a></li>
+        </div>
+    </header>
     <section class="shop">
         <div class="foreground">
 
