Working on shop page

--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
     <section class="shop">
         <div class="foreground">
 
-            <div class="arch_1"></div>
+            <div class="arch_1"><img src="book-7816608_1920.jpg" alt="Magick Grimour"></div>
             <div class="arch_2"></div>
             <div class="arch_3"></div>
         </div>
