Working on shop.html

--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="shop_bd">
     <header>
         <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
         <div class="links">
@@ -19,12 +19,16 @@
         </div>
     </header>
     <section class="shop">
-        <div class="foreground">
 
-            <div class="arch_1"><img src="book-7816608_1920.jpg" alt="Magick Grimour"></div>
-            <div class="arch_2"></div>
-            <div class="arch_3"></div>
+        <div class="arch_1">
+            <h2>Grimoires</h2>
+            <img src="book-7816608_1920.jpg" alt="Magick Grimour">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, id.</p>
+            <h3>$50.00</h3>
         </div>
+        <div class="arch_2"></div>
+        <div class="arch_3"></div>
+
     </section>
 
 </body>
