Working on shop site

--- a/shop.html
+++ b/shop.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-
 <body class="shop_bd">
+  <header>
+    <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
+    <div class="links">
+        <li><a href="about.html">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="shop.html">Shop</a></li>
+    </div>
+  </header>
    
 
     <main class="container">
