--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
         <div class="links">
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html">Shop</a></li>
         </div>
     </header>
