--- a/shop.html
+++ b/shop.html
@@ -13,7 +13,7 @@
     <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
     <div class="links">
         <li><a href="about.html">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="shop.html">Shop</a></li>
     </div>
   </header>
