--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,9 @@
                     <input type="email" name="email" placeholder="Email Address" class="email" required><br>
                     <input type="tel" name="tel" placeholder="Telephone Number" class="tel" required>
                     <i class="fa fa-facebook" id="facebook"></i>
-                    <button onclick="thanks.html" type="submit" class="button2">Send</button>
+                    <i class="fa fa-instagram" id="instagram"></i>
+                    <i class="fa fa-twitter" id="twitter"></i>
+                    <button  onclick="thanks.html" type="submit" class="button3">Send</button>
                     </form>
                 
     
