Working on contact page

--- a/contact.html
+++ b/contact.html
@@ -15,21 +15,23 @@
     <header>
         <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
         <div class="links">
+            
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="shop.html">Shop</a></li>
+            <li><a href="index.html">Home</a></li>
         </div>
     </header>
     <section class="con_bg">
-<  <div class="circle">
+<  <div class="circle1">
   <h1 class="lab">The Witches Lab</h1>
 
   <p>Metaphysical shop</p>
-  <img src="Maskgroup.svg" class="line">
+  <img src="Maskgroup.svg" class="line2">
   <a class="button1" href="shop.html">Shop Now</a>
 </div>
 <section class="con_form">
-  <div class="form_info">
+  <form class="form_info">
     <h3 class="con_header">Contact Us</h3>
 <input type="name" name="name" class="name" placeholder="Name">
 <input type="email" name="email" class="email" placeholder="Email">
@@ -37,12 +39,16 @@
 <h6>Ogden, UT</h6>
 <h6>thewitcheslab4444@gmail.com</h6>
 <h6>(801)133-5555</h6>
-</div>
+  </form>
 </section>
 </section>
 
 <section class="icon_bubble">
+  <div class="icons">
   <i class="fa fa-facebook"></i>
+  <i class="fa fa-instagram"></i>
+  <i class="fa fa-twitter"></i>
+  </div>
 </section>
      
 
