--- a/shop.html
+++ b/shop.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body class="shop_bd">
+<body>
   <header>
     <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
     <div class="links">
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="shop.html">Shop</a></li>
+        <li><a href="index.html">Home</a></li>
     </div>
   </header>
    
-
+<section><h1 class="shop_prompt">Coming Soon!!!</h1></section>
 
 </body>
 
