--- a/about.html
+++ b/about.html
@@ -13,9 +13,10 @@
     <header>
         <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
         <div class="links">
-            <li><a href="#about">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html">Shop</a></li>
+            <li><a href="index.html">Home</a></li>
         </div>
     </header>
     <section class="home_bg">
