--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="shop.html">Shop</a></li>
+            <li><a href="index.html">Home</a></li>
         </div>
     </header>
     <section class="home_bg">
