--- a/shop.html
+++ b/shop.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+  
   <header>
     <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
     <div class="links">
@@ -19,7 +20,7 @@
     </div>
   </header>
    
-<section><h1 class="shop_prompt">Coming Soon!!!</h1></section>
+<section class="shop_bg"><h1 class="shop_prompt">Coming Soon!!!</h1></section>
 
 </body>
 
