--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
   <a class="button1" href="shop.html">Shop Now</a>
 </div>
 <section class="con_form">
-  <form class="form_info">
+  <form class="form_info" action="https://formsubmit.co/4ca756cda0d3371c0c1a8407a29ae3ed" method="POST" /">
     <h3 class="con_header">Contact Us</h3>
 <input type="name" name="name" class="name" placeholder="Name">
 <input type="email" name="email" class="email" placeholder="Email">
