Work on contact page

--- a/contact.html
+++ b/contact.html
@@ -31,14 +31,19 @@
   <a class="button1" href="shop.html">Shop Now</a>
 </div>
 <section class="con_form">
-  <form class="form_info" action="https://formsubmit.co/4ca756cda0d3371c0c1a8407a29ae3ed" method="POST" /">
+  <form class="form_info" action="https://formsubmit.co/thewitcheslab4444@gmail.com" method="POST" /">
     <h3 class="con_header">Contact Us</h3>
+    <div class="inputs">
 <input type="name" name="name" class="name" placeholder="Name">
 <input type="email" name="email" class="email" placeholder="Email">
 <input type="text" name="text" class="text" placeholder="Message" row="10" column="5">
+<button onclick="thanks.html" type="submit" class="button3">Send</button>
+</div>
+<div class="con_data">
 <h6>Ogden, UT</h6>
 <h6>thewitcheslab4444@gmail.com</h6>
 <h6>(801)133-5555</h6>
+</div>
   </form>
 </section>
 </section>
