--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             <p class="p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab dolore rerum id unde, eum nisi. Eligendi vero veritatis reprehenderit voluptatibus, repudiandae, ea rerum earum sapiente quas illum quo excepturi, totam labore vitae? Vero voluptatum
                 nobis doloremque illum quos obcaecati saepe.</p>
         </div>
-        <img class="runes" src="tarot-991041_1920.jpg">
+        <img class="tarot" src="tarot-991041_1920.jpg">
     </section>
 
 </body>
