--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <section class="con_bg">
-<  <div class="circle1">
+<  <div class="circle">
   <h1 class="lab">The Witches Lab</h1>
 
   <p>Metaphysical shop</p>
