--- a/contact.html
+++ b/contact.html
@@ -23,15 +23,15 @@
         </div>
     </header>
     <section class="con_bg">
-<  <div class="circle">
-  <h1 class="lab">The Witches Lab</h1>
+<  <div class="circle_con">
+  <h1 class="con_1">The Witches Lab</h1>
 
-  <p>Metaphysical shop</p>
+  <p class="p_3">Metaphysical shop</p>
   <img src="Maskgroup.svg" class="line2">
-  <a class="button1" href="shop.html">Shop Now</a>
+  <a class="button2" href="shop.html">Shop Now</a>
 </div>
 <section class="con_form">
-  <form class="form_info" action="https://formsubmit.co/thewitcheslab4444@gmail.com" method="POST" /">
+  <form class="form_info" action="https://formsubmit.co/thewitcheslab4444@gmail.com" method="POST" >
     <h3 class="con_header">Contact Us</h3>
     <div class="inputs">
 <input type="name" name="name" class="name" placeholder="Name">
