Finishing first final draft

--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,9 @@
 <button onclick="thanks.html" type="submit" class="button3">Send</button>
 </div>
 <div class="con_data">
-<h6>Ogden, UT</h6>
-<h6>thewitcheslab4444@gmail.com</h6>
-<h6>(801)133-5555</h6>
+<h6 class="city">Ogden, UT</h6>
+<h6 class="mail">thewitcheslab4444@gmail.com</h6>
+<h6 class="tel">(801)133-5555</h6>
 </div>
   </form>
 </section>
