--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <div class="links">
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="about.html">Shop</a></li>
+            <li><a href="shop.html">Shop</a></li>
             <li><a href="index.html">Home</a></li>
         </div>
     </header>
