--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
         <div class="links">
-            <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="shop.html">Shop</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="about.html">Shop</a></li>
             <li><a href="index.html">Home</a></li>
         </div>
     </header>
