--- a/shop.html
+++ b/shop.html
@@ -11,14 +11,16 @@
 <header>
         <a href="index.html"><img class="hand" src="hand.png" alt=""></a>
         <div class="links">
-            <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="about.html">Shop</a></li>
             <li><a href="index.html">Home</a></li>
         </div>
     </header>
 <body>
+    <section class="shop_bg">
  <h1 class="soon">Coming Soon!</h1>
+ </section>
 </body>
 
 </html>
