Puttin in that work

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 </div>
 <div class="con_data">
 <h6 class="city">Ogden, UT</h6>
-<h6 class="mail">thewitcheslab4444@gmail.com</h6>
+<h6 class="mail"><a href="thewitcheslab4444@gmail.com">thewitcheslab4444@gmail.com</a></h6>
 <h6 class="tel">(801)133-5555</h6>
 </div>
   </form>
